# density-annotator

./: Dockerfile  README.md  pyproject.toml
conf/: annotator.yaml
notebook/: check_annotation_point_number.ipynb
src/: density_annotator.py  frame_sampler.py  run_annotator.py  utils.py
